--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,4 +1,6 @@
 /**app.wxss**/
+@import './utils/font/iconfont.wxss';
+
 .container {
   height: 100%;
   display: flex;
@@ -8,3 +10,12 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+@font-face {
+  font-family: 'iconfont';  /* project id 1795484 */
+  src: url('//at.alicdn.com/t/font_1795484_n0awj0jpfi.eot');
+  src: url('//at.alicdn.com/t/font_1795484_n0awj0jpfi.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1795484_n0awj0jpfi.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1795484_n0awj0jpfi.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1795484_n0awj0jpfi.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1795484_n0awj0jpfi.svg#iconfont') format('svg');
+}
