--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,1 +1,11 @@
 /**index.wxss**/
+.header{
+  padding: 15rpx;
+  padding-top: 50rpx;
+  background-color: rgba(153, 191, 76, 0.871);
+  width: 100%;
+  height: 75rpx;
+  font-size: 41rpx;
+  line-height: 85rpx;
+  color: aliceblue;
+}
