--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -20,6 +20,16 @@
   background-color: rgba(255, 255, 255, 0.604);
   color: #aaa;
 }
+.writeDiary{
+  margin: auto;
+  width: 90%;
+  height: 70rpx;
+  line-height: 40rpx;
+  background-color: rgba(255, 255, 255, 0.604);
+  border-radius: 15rpx;
+  padding: 15rpx 25rpx;
+  letter-spacing: 5rpx;
+}
 .msg{
   box-sizing: border-box;
   margin: 30rpx auto;
