--- a/miniprogram/pages/newDiary/newdiary.wxml
+++ b/miniprogram/pages/newDiary/newdiary.wxml
@@ -1,28 +1,42 @@
-<view class="newDairy_title">
-    <view class="title_input">
-        <input type="text" placeholder="{{diary.title}}" maxlength="40" bindblur="titleConfirm" />
-        <button style="width:50rpx" plain='true' bindtap="chooseImg">
-            <image src='../../images/newDiary_icon/camera.png' mode='widthFix'>
-            </image>
-        </button>
+<form>
+    <!-- 标题 -->
+    <view class="cu-form-group" style="background-color: #99c48e;">
+        <view style="font-size: 34rpx;" class="title">
+            <image class="img" src="https://yanglq.xyz/images/duorou16.png" mode='widthFix'></image>
+            标题
+        </view>
+        <input style="font-size: 34rpx;" placeholder="{{diary.title}}" maxlength="30" bindblur="textInput"></input>
     </view>
-</view>
-<view class="content">
-    <view class="content_image" wx:for="{{imgs}}" wx:for-item="item" wx:key="*this">
-        <image src="{{item}}" data-index="{{index}}" mode="widthFix" bindtap="deleteImg" bindlongpress="previewImg">
-        </image>
+    <!-- 正文 -->
+    <view class="cu-form-group textarea">
+        <textarea style="height: 570rpx;font-size: 34rpx;" maxlength="-1" disabled="{{modalName!=null}}" bindinput="textareaInput"
+            placeholder="{{diary.content}}"></textarea>
     </view>
-    <view class="content_text">
-        <textarea class="text_area" name="textarea" placeholder="{{diary.content}}" maxlength="-1" auto-height="true"
-            bindblur="contentConfirm">
-        </textarea>
+    <!-- 图片 -->
+    <view class="cu-bar bg-white margin-top">
+        <view class="action" style="font-size: 34rpx;">
+            <image class="img" src="https://yanglq.xyz/images/duorou18.png" mode='widthFix'></image>
+            上传图片
+        </view>
+        <view class="action">
+            {{diary.imgList.length}}/4
+        </view>
     </view>
-
-</view>
-
-<view class="bottom">
-    <button plain='true' bindtap="diarySubmit">
-        <image src='../../images/newDiary_icon/preservation.png' mode='widthFix'>
-        </image>
-    </button>
-</view>
+    <view class="cu-form-group">
+        <view class="grid col-4 grid-square flex-sub">
+            <view class="bg-img" wx:for="{{diary.imgList}}" wx:for-item="item" wx:key="*this" bindtap="ViewImage">
+                <image src="{{item}}" data-index="{{index}}" mode='aspectFill'></image>
+                <view class="cu-tag bg-red" catchtap="DelImg" data-index="{{index}}">
+                    <text class="cuIcon-close"></text>
+                </view>
+            </view>
+            <view style="border-radius:10%;" class="solids" bindtap="ChooseImage" wx:if="{{diary.imgList.length<4}}">
+                <image class="photo_img" src='https://yanglq.xyz/images/camera.png' mode='widthFix'></image>
+            </view>
+        </view>
+    </view>
+    <!-- 提交 -->
+    <view class="bottom" bindtap="diarySubmit">
+        <image src='https://yanglq.xyz/images/preservation.png' mode='widthFix'></image>
+    </view>
+</form>
