修改文件名

--- a/miniprogram/pages/newDiary/newdiary.wxml
+++ b/miniprogram/pages/newDiary/newdiary.wxml
@@ -1,2 +1,2 @@
-<!--pages/newDiary/newdiary.wxml-->
-<text>pages/newDiary/newdiary.wxml</text>
+<!--pages/newDiary/newDiary.wxml-->
+<text>pages/newDiary/newDiary.wxml</text>
