--- a/miniprogram/pages/userInfo/userInfo.wxml
+++ b/miniprogram/pages/userInfo/userInfo.wxml
@@ -1,43 +1,50 @@
-<view class="cu-list menu sm-border card-menu margin-top">
-    <view class="cu-item arrow">
-        <view>
-            <image class="cu-avatar round"
-                src="{{userInfo.gender === 0 ? 'https://yanglq.xyz/images/duorou16.png' : 'https://yanglq.xyz/images/duorou17.png'}}"
-                mode='widthFix'></image>
-            <text style="margin-left:10rpx;">头像</text>
-        </view>
-
-        <view class="cu-avatar xl round" style="background-image:url({{userInfo.avatarUrl}});"></view>
+<bgCanvas></bgCanvas>
+<view class="container">
+    <view class="header">
+        <text>个人中心</text>
+        <cover-image class="imgIcon" src="https://yanglq.xyz/images/duorouduocai.png"></cover-image>
     </view>
-    <view class="cu-item arrow">
-        <view>
-            <image class="cu-avatar round" src="https://yanglq.xyz/images/duorou18.png" mode='widthFix'></image>
-            <text style="margin-left:10rpx;">昵称</text>
+    <view class="cu-list menu sm-border card-menu margin-top">
+        <view class="cu-item arrow">
+            <view>
+                <image class="cu-avatar round"
+                    src="{{userInfo.gender === 0 ? 'https://yanglq.xyz/images/duorou16.png' : 'https://yanglq.xyz/images/duorou17.png'}}"
+                    mode='widthFix'></image>
+                <text style="margin-left:10rpx;">头像</text>
+            </view>
+    
+            <view class="cu-avatar xl round" style="background-image:url({{userInfo.avatarUrl}});"></view>
         </view>
-        <view>
-            {{userInfo.nickName}}
+        <view class="cu-item arrow">
+            <view>
+                <image class="cu-avatar round" src="https://yanglq.xyz/images/duorou18.png" mode='widthFix'></image>
+                <text style="margin-left:10rpx;">昵称</text>
+            </view>
+            <view>
+                {{userInfo.nickName}}
+            </view>
+        </view>
+        <view class="cu-item arrow">
+            <view>
+                <image class="cu-avatar round" src="https://yanglq.xyz/images/duorou19.png" mode='widthFix'></image>
+                <text style="margin-left:10rpx;">性别</text>
+            </view>
+            <view wx:if="{{userInfo.gender === 0}}">
+                男
+            </view>
+            <view wx:else>
+                女
+            </view>
+        </view>
+        <view class="cu-item arrow">
+            <view>
+                <image class="cu-avatar round" src="https://yanglq.xyz/images/duorou20.png" mode='widthFix'></image>
+                <text style="margin-left:10rpx;">个性签名</text>
+            </view>
+            <view>
+            </view>
         </view>
     </view>
-    <view class="cu-item arrow">
-        <view>
-            <image class="cu-avatar round" src="https://yanglq.xyz/images/duorou19.png" mode='widthFix'></image>
-            <text style="margin-left:10rpx;">性别</text>
-        </view>
-        <view wx:if="{{userInfo.gender === 0}}">
-            男
-        </view>
-        <view wx:else>
-            女
-        </view>
-    </view>
-    <view class="cu-item arrow">
-        <view>
-            <image class="cu-avatar round" src="https://yanglq.xyz/images/duorou20.png" mode='widthFix'></image>
-            <text style="margin-left:10rpx;">个性签名</text>
-        </view>
-        <view>
-        </view>
-    </view>
+    <button open-type="getUserInfo" bindgetuserinfo="getUserInfo">授权</button>
 </view>
-<button open-type="getUserInfo" bindgetuserinfo="getUserInfo">授权</button>
-
+  
