--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,4 +1,44 @@
 <!--index.wxml-->
+<bgCanvas></bgCanvas>
 <view class="container">
-  
+	<view class="header">
+		<text>多肉日记本</text>
+		<cover-image class="imgIcon" src="https://yanglq.xyz/images/duorouduocai.png"></cover-image>
+	</view>
+
+
+
+	<!-- 点击跳转到搜索界面 -->
+	<view class="search" bindtap="search">
+		<text class="icon iconfont icon-sousuo"></text>
+		<text>Search</text>
+	</view>
+
+	<view class="swiperImg">
+		<swiper class="card-swiper round-dot" indicator-dots="true" circular="true" autoplay="true" interval="5000"
+			duration="500" bindchange="cardSwiper" indicator-color="#8799a3" indicator-active-color="#0081ff">
+			<swiper-item wx:for="{{swiperList}}" wx:key='index' class="{{cardCur==index?'cur':''}}">
+				<view class="swiper-item">
+					<card data-item="{{item}}" card="{{item}}" bindtap="showImgList"></card>
+				</view>
+			</swiper-item>
+		</swiper>
+	</view>
+
+	<view class="writeDiary" bindtap="newDiary">
+		<text class="iconfont icon-add-fill" style="color:rgba(153, 191, 76, 0.871)"></text>
+		<text class="colorgradient">来写一篇日记吧~</text>
+	</view>
+
+	<view class="msg">
+		<view class="title">
+			<cover-image class="imgIcon" src="https://yanglq.xyz/images/duorouduocai.png"></cover-image>
+			<text class="colorgradient">今日份小贴士~</text>
+		</view>
+		<view class="content">
+			aekrjlkbevjklrjejbrlahurl4bq3glirj4bqg3ljrbqjrbvl3kjrbvqk3jraaaaaaaaaaaaaaaaaaaaabv
+		</view>
+	</view>
+
+	<view class="recommend"></view>
 </view>
