--- a/miniprogram/pages/userInfo/userInfo.wxss
+++ b/miniprogram/pages/userInfo/userInfo.wxss
@@ -51,6 +51,16 @@
   content: "\e60b";
 }
 
+.header{
+  padding: 15rpx;
+  padding-top: 50rpx;
+  background-color: rgba(153, 191, 76, 0.871);
+  width: 100%;
+  height: 130rpx;
+  font-size: 41rpx;
+  line-height: 85rpx;
+  color: aliceblue;
+}
 
 
 /*
