--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,18 +1,14 @@
 <!--index.wxml-->
-<bgCanvas></bgCanvas>
 <view class="container">
-	<view class="header"
-  >
+	<bgCanvas></bgCanvas>
+
+	<view class="header">
 		<text>多肉日记本</text>
 		<cover-image class="imgIcon" src="https://yanglq.xyz/images/duorouduocai.png"></cover-image>
 	</view>
 
-	
-
 	<!-- 点击跳转到搜索界面 -->
-	<view class="search"
-    bindtap="search"
-  >
+	<view class="search" bindtap="search">
 		<text class="icon iconfont icon-sousuo"></text>
 		<text>Search</text>
 	</view>
@@ -27,7 +23,8 @@
 		</swiper>
 	</view>
 
-	<view class="writeDiary">
+
+	<view class="writeDiary" bindtap="newDiary">
 		<text class="iconfont icon-add-fill" style="color:rgba(153, 191, 76, 0.871)"></text>
 		<text class="colorgradient">来写一篇日记吧~</text>
 	</view>
@@ -37,9 +34,9 @@
 			<cover-image class="imgIcon" src="https://yanglq.xyz/images/duorouduocai.png"></cover-image>
 			<text class="colorgradient">今日份小贴士~</text>
 		</view>
-    <view class="content">
-    aekrjlkbevjklrjejbrlahurl4bq3glirj4bqg3ljrbqjrbvl3kjrbvqk3jraaaaaaaaaaaaaaaaaaaaabv
-    </view>
+		<view class="content">
+		aekrjlkbevjklrjejbrlahurl4bq3glirj4bqg3ljrbqjrbvl3kjrbvqk3jraaaaaaaaaaaaaaaaaaaaabv
+		</view>
 	</view>
 
   <view class="recommend"></view>
